# slack-scheduler

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
slack_scheduler/: auth.py  cli.py  config.example.yaml  config.py  logger.py  paths.py  scheduler.py  selector.py  sender.py  templates.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_logger.py  test_paths.py  test_scheduler.py  test_selector.py  test_sender.py  test_templates.py
