[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-scheduler"
version = "0.1.1"
description = "Automated Slack message scheduler with cron-based scheduling, message rotation, and jitter support"
readme = "README.md"
license = "MIT"
authors = [{name = "Denniso2", email = "dennis12552@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "platformdirs>=4.0.0",
    "holidays>=0.40",
]

[project.urls]
Repository = "https://github.com/Denniso2/slack-scheduler"

[project.scripts]
slack-scheduler = "slack_scheduler.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.package-data]
slack_scheduler = ["config.example.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
